practice/liveness_nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-liveness
  name: nginx-liveness
spec:
  containers:
  - image: nginx
    name: nginx-liveness
    ports:
    - containerPort: 80
    resources:
      requests:
        cpu: 100m
        memory: 250Mi
      limits:
        cpu: 200m
        memory: 512Mi
    livenessProbe:
      httpGet:
        path: /healthz
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 3
