practice/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - name: nginx-volume
      mountPath: /etc/cfg
  restartPolicy: Never
  volumes:
  - name: nginx-volume
    configMap:
      name: cfgvolume
