practice/pvc-practice.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-server
spec:
  containers:
  - name: web-server
    image: nginx
    volumeMounts:
    - name: practice
      mountPath: /usr/share/nginx/html
  volumes:
  - name: practice
    persistentVolumeClaim:
      claimName: pv-volume
