practice/readiness-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: readiness-nginx
  name: readiness-nginx
spec:
  containers:
  - image: nginx
    name: readiness-nginx
    ports:
    - containerPort: 80
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 3
      periodSeconds: 10
