practice/ingress_deny_all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denies-ingress-all-traffic
  namespace: web
spec:
  policyTypes:
  - Ingress
  podSelector: {}
  ingress: []
